<resources>
    <string name="app_name" translatable="false">Pizza Shift</string>
    <string name="hint_informe_seu_login">Type login</string>
    <string name="hint_informe_sua_senha">Type password</string>
    <string name="label_conectar">Connect</string>
    <string name="message_campo_obrigatorio">Enter attribute</string>
    <string name="hello">Hello, %1$s</string>

    <string name="label_cartao">Cartão</string>
    <string name="label_cheque">Cheque</string>
    <string name="label_dinheiro">Dinheiro</string>
    <string name="label_vr">VR</string>

    <string name="label_atum">Atum</string>
    <string name="seleciona_pizza">Selecione Pizza</string>
    <string name="label_calabresa">Calabresa</string>
    <string name="label_bacon">bacon</string>
    <string name="label_mussarela">Mussarela</string>
    <string name="label_tamanho_pizza">Pizza Size</string>
    <string name="label_pequena">pequena</string>
    <string name="label_media">média</string>
    <string name="label_grande">grande</string>
    <string name="label_forma_pagamento">Forma de pagamento</string>
    <string name="label_fechar_pedido">Fechar pedido</string>

</resources>
